...
        ),
    )

    val MOCK_LOCATIONS: List<LocationMedia> = listOf(
        LocationMedia(media = MOCK_PHOTOS[0], location = "Bucharest, Romania"),
        LocationMedia(media = MOCK_PHOTOS[1], location = "Bucharest, Romania"),
        LocationMedia(media = MOCK_PHOTOS[2], location = "Paris, France"),
        LocationMedia(media = MOCK_PHOTOS[3], location = "Paris, France"),
        LocationMedia(media = MOCK_PHOTOS[4], location = "Paris, France"),
        LocationMedia(media = MOCK_PHOTOS[5], location = "New York, United States"),
        LocationMedia(media = MOCK_PHOTOS[6], location = "Tokyo, Japan"),
        LocationMedia(media = MOCK_PHOTOS[7], location = "Tokyo, Japan"),
    )
...
